feat: Added Login Page UI and logic

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,8 @@
 {
-"goodMorning": "Good morning"
+"login": "Login",
+"password": "Password",
+"signIn": "Sign In",
+"continueTitle": "Continue"
+
 
 }
