feat: Added Home Page UI and base logic

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,7 +2,6 @@
 "login": "Login",
 "password": "Password",
 "signIn": "Sign In",
-"continueTitle": "Continue"
-
-
+"continueTitle": "Continue",
+"markupTest": "Markup Test"
 }
